--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <div id="topbar">
-<div id="nowplaying"></div>
 <div id="info"></div>
+<div id="nowplaying"></div>
 </div>
 <div id="topspacer"></div>
 <div class="container">
@@ -21,6 +21,7 @@
 {% endfor %}
 </div>
 </div>
+<div id="hover"></div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
 <script src="{{ url_for('static', filename='jquery.lazyload.min.js') }}" type="text/javascript"></script>
