Keep everything static

--- a/static/xub.css
+++ b/static/xub.css
@@ -1,7 +1,7 @@
 body {
     background: #121212;
     color: #ecf0f1;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: sans-serif;
 }
 
 a {
