--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ title }}</title>
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
-<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="{{ url_for('static', filename='font-awesome.min.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='xub.css') }}">
 </head>
 <body>
@@ -22,8 +20,7 @@
 </div>
 </div>
 <div id="hover"></div>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
+<script src="{{ url_for('static', filename='jquery-2.1.0.min.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('static', filename='jquery.lazyload.min.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('static', filename='xub.js') }}" type="text/javascript"></script>
 </body>
