--- a/static/xub.css
+++ b/static/xub.css
@@ -18,6 +18,7 @@ a:active {
 }
 
 a:hover {
+    color: #e74c3c;
     text-decoration: underline;
 }
 
@@ -68,21 +69,34 @@ border-bottom: 1px solid #333333;
 padding: 0px;
 }
 
-#nowplaying {
-display: inline;
-float:right;
-height: 32px;
-font-size: small;
-color: #7f8c8d;
+#topbar_buttons {
+    display: inline;
+    float: left;
+    height: 32px;
+    line-height: 32px;
 }
 
 #info {
 display: inline;
-text-align: left;
 float: left;
+text-align: left;
+vertical-align: middle;
 height: 32px;
+line-height: 32px;
 font-size: large;
 }
+
+
+#nowplaying {
+display: inline;
+float:right;
+vertical-align: middle;
+height: 32px;
+line-height: 32px;
+color: #7f8c8d;
+padding-right: 1em;
+}
+
 
 #hover {
 position: fixed;
@@ -94,3 +108,14 @@ padding: 2px;
 background: #95a5a6;
 color: #333;
 }
+
+.playlist_view {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.current_track {
+    background: #222;
+}
+
