--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,25 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{{ title }}</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='font-awesome.min.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='xub.css') }}">
-</head>
-<body>
+{% extends "layout.html" %}
+{% block body %}
+
 <div id="topbar">
+<div id="topbar_buttons">
+<a href="/playlist"><i class="fa fa-2x fa-bars"></i></a>
+</div>
 <div id="info"></div>
 <div id="nowplaying"></div>
+
 </div>
+
 <div id="topspacer"></div>
 <div class="container">
 <div class="albums">
-{% for album in albums %}<img src="{{url_for('static', filename='blank.png')}}" data-original="/art/{{album.idx}}" data-idx="{{album.idx}}" class="lazy" width="150" height="150">
+{% for album in albums %}<img src="{{url_for('static', filename='blank.png')}}" data-original="/api/art/{{album.idx}}" data-idx="{{album.idx}}" class="lazy" width="150" height="150">
 {% endfor %}
 </div>
 </div>
 <div id="hover"></div>
-<script src="{{ url_for('static', filename='jquery-2.1.0.min.js') }}" type="text/javascript"></script>
-<script src="{{ url_for('static', filename='jquery.lazyload.min.js') }}" type="text/javascript"></script>
-<script src="{{ url_for('static', filename='xub.js') }}" type="text/javascript"></script>
-</body>
-</html>
+{% endblock %}
+{% block scripts %}
+<script src="{{ url_for('static', filename='mainpage.js') }}" type="text/javascript"></script>
+{% endblock %}
+
