--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ title }}</title>
+<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ url_for('static', filename='font-awesome.min.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='xub.css') }}">
 </head>
