--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -2,9 +2,8 @@
 {% block body %}
 <div id="topbar">
   <div id="topbar_buttons">
-    <a href="/"><i class="fa fa-2x fa-bars fa-fw"></i></a>&nbsp;
+    <a href="/"><i class="fa fa-2x fa-home fa-fw"></i></a>&nbsp;
     <a href="#" onclick="$.get('/api/playback/toggle');"><i class="fa fa-2x fa-pause fa-fw"></i></a>&nbsp;
-    <a href="#" onclick="$.get('/api/playback/stop');"><i class="fa fa-2x fa-stop fa-fw"></i></a>&nbsp;
    </div>
   <div id="info"></div>
   <div id="nowplaying"></div>
