--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
 </div>
 </div>
 <div id="hover"></div>
+<div id="overlay"></div>
 {% endblock %}
 {% block scripts %}
 <script src="{{ url_for('static', filename='mainpage.js') }}" type="text/javascript"></script>
