--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -4,6 +4,7 @@
   <div id="topbar_buttons">
     <a href="/"><i class="fa fa-2x fa-home fa-fw"></i></a>&nbsp;
     <a href="#" onclick="$.get('/api/playback/toggle');"><i class="fa fa-2x fa-pause fa-fw"></i></a>&nbsp;
+    <a href="#" onclick="$.get('/api/clear', rebuildPlaylist);"><i class="fa fa-2x fa-trash-o fa-fw"></i></a>&nbsp;
    </div>
   <div id="info"></div>
   <div id="nowplaying"></div>
