--- a/static/xub.css
+++ b/static/xub.css
@@ -13,7 +13,7 @@ body {
 }
 
 a {
-    color: #333;
+    color: #bdc3c7;
     text-decoration: none;
 }
 
@@ -69,6 +69,7 @@ background: #222222;
 border-bottom: 1px solid #333333;
 padding: 0px;
 margin: 0px;
+z-index: 10;
 }
 
 #topbar_buttons {
