--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <div id="topbar">
   <div id="topbar_buttons">
     <a href="/playlist"><i class="fa fa-2x fa-bars fa-fw"></i></a>&nbsp;
-    <a href="#" onclick="$.get('/api/playback/toggle');"><i class="fa fa-2x fa-pause fa-fw"></i></a>&nbsp;
+    <a href="javascript:;" onclick="$.get('/api/playback/toggle');"><i class="fa fa-2x fa-pause fa-fw"></i></a>&nbsp;
    </div>
   <div id="info"></div>
   <div id="nowplaying"></div>
