--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,11 @@
   <div id="topbar_buttons">
     <a href="/playlist"><i class="fa fa-2x fa-bars fa-fw"></i></a>&nbsp;
     <a href="javascript:;" onclick="$.get('/api/playback/toggle');"><i class="fa fa-2x fa-pause fa-fw"></i></a>&nbsp;
+    <a href="javascript:;"><i class="fa fa-2x fa-search fa-fw"></i></a>&nbsp;
    </div>
-  <div id="info"></div>
   <div id="nowplaying"></div>
+  <div id="info"><progress value="0" max="100"></progress></div>
+  <div style="clear:both;"></div>
 </div>
 
 <div id="topspacer"></div>
