--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -6,8 +6,9 @@
     <a href="javascript:;" onclick="$.get('/api/playback/toggle');"><i class="fa fa-2x fa-pause fa-fw"></i></a>&nbsp;
     <a href="javascript:;" onclick="$.get('/api/clear', rebuildPlaylist);"><i class="fa fa-2x fa-trash-o fa-fw"></i></a>&nbsp;
    </div>
-  <div id="info"></div>
   <div id="nowplaying"></div>
+  <div id="info"><progress value="0" max="100"></progress></div>
+  <div style="clear:both;"></div>
 </div>
 <div id="topspacer"></div>
 
