--- a/static/xub.css
+++ b/static/xub.css
@@ -7,6 +7,20 @@ body {
     padding: 0px;
 }
 
+::-webkit-scrollbar {
+    height: 12px;
+	width: 8px;
+	background: #111;
+}
+::-webkit-scrollbar-thumb {
+    background: #444;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+::-webkit-scrollbar-corner {
+    background: #111;
+}
+
 .container {
     margin: 0px;
     padding: 0px;
@@ -159,7 +173,7 @@ li {
 
 .current_art img {
     max-width: 90%;
- -webkit-box-reflect: below 5px -webkit-linear-gradient(bottom, rgba(255,255,255,0.3) 0%, transparent 26%, transparent 100%);
+    -webkit-box-reflect: below 5px -webkit-linear-gradient(bottom, rgba(255,255,255,0.3) 0%, transparent 26%, transparent 100%);
 }
 
 #info {
@@ -184,8 +198,8 @@ progress[role]     /* polyfill */
 	background-size: auto;
 	
 	/* Dimensions */
+    width: 40px;
 	height: 2px;
-    width: 256px;
 }
 
 /* Polyfill */
@@ -226,4 +240,52 @@ progress::-webkit-progress-value {
 /* Polyfill */
 progress[aria-valuenow]:before  {
     background: #d35400;
+}
+
+@media screen and (max-width: 360px) {
+    progress, progress[role] {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 400px) {
+    progress, progress[role] {
+        width: 120px;
+    }
+}
+
+@media screen and (min-width: 500px) {
+    progress, progress[role] {
+        width: 200px;
+    }
+}
+
+@media screen and (min-width: 700px) {
+    progress, progress[role] {
+        width: 350px;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    progress, progress[role] {
+        width: 500px;
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    progress, progress[role] {
+        width: 650px;
+    }
+}
+
+@media screen and (min-width: 1300px) {
+    progress, progress[role] {
+        width: 800px;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    progress, progress[role] {
+        width: 950px;
+    }
 }
