--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
 {% block body %}{% endblock %}
 
 <script src="{{ url_for('static', filename='jquery-2.1.0.min.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='jquery-ui.min.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('static', filename='jquery.lazyload.min.js') }}" type="text/javascript"></script>
 <script src="{{ url_for('static', filename='xub.js') }}" type="text/javascript"></script>
 
