tweaked large-format display

--- a/static/xub.css
+++ b/static/xub.css
@@ -134,9 +134,8 @@ overflow: hidden;
 }
 
 .playlist_view {
-    max-width: 720px;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 640px;
+    margin: 0 auto;
     line-height: 1.6em;
 }
 
@@ -294,6 +293,16 @@ progress[aria-valuenow]:before  {
 @media screen and (min-width: 1500px) {
     progress, progress[role] {
         width: 950px;
+    }
+
+    .current_art {
+        position: fixed;
+        right: 32px;
+        top: 64px;
+    }
+
+    .current_art img {
+        max-width: 420px;
     }
 }
 
