--- a/templates/index.html
+++ b/templates/index.html
@@ -3,23 +3,28 @@
 <div id="topbar">
   <div id="topbar_buttons">
     <a href="/playlist"><i class="fa fa-2x fa-bars fa-fw"></i></a>&nbsp;
-    <a href="javascript:;" onclick="$.get('/api/playback/toggle');"><i class="fa fa-2x fa-pause fa-fw"></i></a>&nbsp;
-    <a href="javascript:;"><i class="fa fa-2x fa-search fa-fw"></i></a>&nbsp;
+    <a id="pausebutton" href="javascript:;" onclick="$.get('/api/playback/toggle');"><i class="fa fa-2x fa-pause fa-fw"></i></a>&nbsp;
+    <a id="searchbutton" href="javascript:;"><i class="fa fa-2x fa-search fa-fw"></i></a>&nbsp;
    </div>
   <div id="nowplaying"></div>
   <div id="info"><progress value="0" max="100"></progress></div>
   <div style="clear:both;"></div>
 </div>
-
 <div id="topspacer"></div>
+<div id="search">
+<form id="searchform" action="" method="get">
+	<fieldset>
+      <select id="searchwhat"><option>artists</option><option>albums</option></select>
+		<input type="text" id="searchbar" />
+	</fieldset>
+</form>
+</div>
 <div class="container">
-<div class="albums">
-{% for album in albums %}<div class="wrap"><img src="{{url_for('static', filename='blank.png')}}" data-original="/api/art/{{album.idx}}?{{album.album|urlencode}}" data-idx="{{album.idx}}" class="lazy" width="150" height="150"></div>
-{% endfor %}
+  <div class="albums">
+  </div>
 </div>
-</div>
-<div id="hover"></div>
 <div id="overlay"></div>
+<div id="hover"></div>
 {% endblock %}
 {% block scripts %}
 <script src="{{ url_for('static', filename='mainpage.js') }}" type="text/javascript"></script>
