--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
     <a href="/playlist"><i class="fa fa-2x fa-bars fa-fw"></i></a>&nbsp;
     <a id="pausebutton" href="javascript:;" onclick="$.get('/api/playback/toggle');"><i class="fa fa-2x fa-pause fa-fw"></i></a>&nbsp;
     <a id="searchbutton" href="javascript:;"><i class="fa fa-2x fa-search fa-fw"></i></a>&nbsp;
+    <a id="lmodbutton" href="/?what=newest"><i class="fa fa-2x fa-history fa-fw"></i></a>&nbsp;
+    <a id="artistbutton" href="/?what=byartist"><i class="fa fa-2x fa-users fa-fw"></i></a>&nbsp;
+    <a id="albumbutton" href="/?what=byalbum"><i class="fa fa-2x fa-sort-alpha-asc fa-fw"></i></a>&nbsp;
    </div>
   <div id="nowplaying"></div>
   <div id="info"><progress value="0" max="100"></progress></div>
