--- a/static/xub.css
+++ b/static/xub.css
@@ -1,7 +1,7 @@
 body {
     background: #111;
     color: #95a5a6;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Hind', sans-serif;
     font-size: 0.8em;
     margin: 0px;
     padding: 0px;
